registerd users section

--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
                                                                             -------------------->
 
         <!-------------- part 1  starts--------->
-        <div
+        <div class="z-0">
+            <div
           class="hero min-h-[80vh] mt-10"
-          style="background-image: url(images/banner.png)"
+          style="background-image: url(images/banner.png) "
         >
           <div class="hero-overlay"></div>
           <div class="hero-content text-neutral-content text-center">
@@ -119,8 +120,10 @@
             </div>
           </div>
         </div>
+        </div>
         <!------------ part 2 starts----------->
-        <div class="flex justify-center items-center gap-6 mb-10 border">
+       <div class="z-10  -m-16">
+         <div class="flex justify-center items-center gap-6 mb-10 border">
           <div
             class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
           >
@@ -167,6 +170,7 @@
             </div>
           </div>
         </div>
+       </div>
         <!-------------------------------- hero section ends ------------------------------>
       </main>
       <!-------------------------------- main section ends -------------------------------------->
@@ -178,6 +182,7 @@
       <script src="scripts/coupon.js"></script>
       <script src="scripts/price.js"></script>
       <script src="scripts/seat-booking.js"></script>
+      
     </div>
     <!--------- script tags ends----------->
   </body>
