--- a/index.html
+++ b/index.html
@@ -94,85 +94,85 @@
 
         <!-------------- part 1  starts--------->
         <div class="z-0">
-            <div
-          class="hero min-h-[80vh] mt-10"
-          style="background-image: url(images/banner.png) "
-        >
-          <div class="hero-overlay"></div>
-          <div class="hero-content text-neutral-content text-center">
-            <div class="max-w-lg">
-              <h1 class="mb-5 lg:text-4xl md:text-3xl font-bold">
-                End-to-End Travel with <br /><span class="text-[#1DD100]"
-                  >S Paribahan</span
-                >
-              </h1>
+          <div
+            class="hero min-h-[80vh] mt-10"
+            style="background-image: url(images/banner.png)"
+          >
+            <div class="hero-overlay"></div>
+            <div class="hero-content text-neutral-content text-center">
+              <div class="max-w-lg">
+                <h1 class="mb-5 lg:text-4xl md:text-3xl font-bold">
+                  End-to-End Travel with <br /><span class="text-[#1DD100]"
+                    >S Paribahan</span
+                  >
+                </h1>
 
-              <p class="mb-5 text-white">
-                Yes, you can run unit tests and view the results directly within
-                the app. The integrated testing features allow for a streamlined
-                .
-              </p>
-              <button
-                class="btn lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
-              >
-                Buy Tickets
-              </button>
+                <p class="mb-5 text-white">
+                  Yes, you can run unit tests and view the results directly
+                  within the app. The integrated testing features allow for a
+                  streamlined .
+                </p>
+                <button
+                  class="btn lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
+                >
+                  Buy Tickets
+                </button>
+              </div>
             </div>
           </div>
-        </div>
         </div>
         <!------------ part 2 starts----------->
-        <div class="z-10  -m-16">
-         <div class="flex justify-center items-center gap-6 mb-10 border">
-          <div
-            class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
-          >
-            <div>
-              <img src="images/people.png" alt="" />
+        <div class="z-10 -m-16">
+          <div class="flex justify-center items-center gap-6 mb-10 border">
+            <div
+              class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
+            >
+              <div>
+                <img src="images/people.png" alt="" />
+              </div>
+              <div>
+                <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
+                  500K+
+                </h1>
+                <p class="lg:text-[18px] text-[#030712] opacity-60">
+                  Registered users
+                </p>
+              </div>
             </div>
-            <div>
-              <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
-                500K+
-              </h1>
-              <p class="lg:text-[18px] text-[#030712] opacity-60">
-                Registered users
-              </p>
+            <div
+              class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
+            >
+              <div>
+                <img src="images/ticket-cupon.png" alt="" />
+              </div>
+              <div>
+                <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
+                  1.7 Lacks
+                </h1>
+                <p class="lg:text-[18px] text-[#030712] opacity-60">
+                  Tickets sold
+                </p>
+              </div>
             </div>
-          </div>
-          <div
-            class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
-          >
-            <div>
-              <img src="images/ticket-cupon.png" alt="" />
-            </div>
-            <div>
-              <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
-                1.7 Lacks
-              </h1>
-              <p class="lg:text-[18px] text-[#030712] opacity-60">
-                Tickets sold
-              </p>
-            </div>
-          </div>
-          <div
-            class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
-          >
-            <div>
-              <img src="images/stoppage.png" alt="" />
-            </div>
-            <div>
-              <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
-                80K+
-              </h1>
-              <p class="lg:text-[18px] text-[#030712] opacity-60">
-                Rental partners
-              </p>
+            <div
+              class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
+            >
+              <div>
+                <img src="images/stoppage.png" alt="" />
+              </div>
+              <div>
+                <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
+                  80K+
+                </h1>
+                <p class="lg:text-[18px] text-[#030712] opacity-60">
+                  Rental partners
+                </p>
+              </div>
             </div>
           </div>
         </div>
-       </div>
         <!-------------------------------- hero section ends ------------------------------>
-        </main>
+      </main>
       <!-------------------------------- main section ends -------------------------------------->
     </section>
 
@@ -182,8 +182,8 @@
       <script src="scripts/coupon.js"></script>
       <script src="scripts/price.js"></script>
       <script src="scripts/seat-booking.js"></script>
-      
     </div>
+
     <!--------- script tags ends----------->
   </body>
 </html>
