--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   </head>
   <body>
     <section class="lg:px-32 md:px-12">
-      <!--------------------
-                        ----------- header section or  nav bar start --------------
-                                                                            ------------->
+      <!-------------------------- header section or  nav bar start ------------------------->
       <header>
         <div class="navbar bg-base-100 shadow-sm">
           <div class="navbar-start">
@@ -83,95 +81,144 @@
       </header>
       <!------------- header section or  nav bar ends -------------------->
 
-      <!----------------------
-                             ----------- main sections starts ------------
-                                                                  ------------------>
-
+      <!------------------------------- main sections starts ---------------------------->
       <main>
-        <!--------------------
-                          -------------------- hero section starts --------------
-                                                                            -------------------->
+        <!-------------------------------------- hero section starts ------------------------------->
 
-        <!-------------- part 1  starts--------->
-        <div class="z-0">
-          <div
-            class="hero min-h-[80vh] mt-10"
-            style="background-image: url(images/banner.png)"
-          >
-            <div class="hero-overlay"></div>
-            <div class="hero-content text-neutral-content text-center">
-              <div class="max-w-lg">
-                <h1 class="mb-5 lg:text-4xl md:text-3xl font-bold">
-                  End-to-End Travel with <br /><span class="text-[#1DD100]"
-                    >S Paribahan</span
+        <div class="pb-28">
+          <!-------------- part 1  starts--------->
+          <div class="z-0">
+            <div
+              class="hero min-h-[80vh] mt-10"
+              style="background-image: url(images/banner.png)"
+            >
+              <div class="hero-overlay"></div>
+              <div class="hero-content text-neutral-content text-center">
+                <div class="max-w-lg">
+                  <h1 class="mb-5 lg:text-4xl md:text-3xl font-bold">
+                    End-to-End Travel with <br /><span class="text-[#1DD100]"
+                      >S Paribahan</span
+                    >
+                  </h1>
+
+                  <p class="mb-5 text-white">
+                    Yes, you can run unit tests and view the results directly
+                    within the app. The integrated testing features allow for a
+                    streamlined .
+                  </p>
+                  <button
+                    class="btn lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
                   >
-                </h1>
-
-                <p class="mb-5 text-white">
-                  Yes, you can run unit tests and view the results directly
-                  within the app. The integrated testing features allow for a
-                  streamlined .
-                </p>
-                <button
-                  class="btn lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
-                >
-                  Buy Tickets
-                </button>
+                    Buy Tickets
+                  </button>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <!------------ part 2 starts----------->
-        <div class="z-10 -m-16">
-          <div class="flex justify-center items-center gap-6 mb-10 border">
-            <div
-              class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
-            >
-              <div>
-                <img src="images/people.png" alt="" />
+          <!------------ part 2 starts----------->
+          <div class="z-10 -m-16">
+            <div class="flex justify-center items-center gap-6 mb-10">
+              <div
+                class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
+              >
+                <div>
+                  <img src="images/people.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
+                    500K+
+                  </h1>
+                  <p class="lg:text-[18px] text-[#030712] opacity-60">
+                    Registered users
+                  </p>
+                </div>
               </div>
-              <div>
-                <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
-                  500K+
-                </h1>
-                <p class="lg:text-[18px] text-[#030712] opacity-60">
-                  Registered users
-                </p>
+              <div
+                class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
+              >
+                <div>
+                  <img src="images/ticket-cupon.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
+                    1.7 Lacks
+                  </h1>
+                  <p class="lg:text-[18px] text-[#030712] opacity-60">
+                    Tickets sold
+                  </p>
+                </div>
               </div>
-            </div>
-            <div
-              class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
-            >
-              <div>
-                <img src="images/ticket-cupon.png" alt="" />
-              </div>
-              <div>
-                <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
-                  1.7 Lacks
-                </h1>
-                <p class="lg:text-[18px] text-[#030712] opacity-60">
-                  Tickets sold
-                </p>
-              </div>
-            </div>
-            <div
-              class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
-            >
-              <div>
-                <img src="images/stoppage.png" alt="" />
-              </div>
-              <div>
-                <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
-                  80K+
-                </h1>
-                <p class="lg:text-[18px] text-[#030712] opacity-60">
-                  Rental partners
-                </p>
+              <div
+                class="div-1 flex items-center gap-4 border-green-600 border-b-[4px] justify-center p-8 bg-white lg:rounded-xl md:rounded-lg"
+              >
+                <div>
+                  <img src="images/stoppage.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="lg:text-4xl md:text-3xl text-black font-semibold">
+                    80K+
+                  </h1>
+                  <p class="lg:text-[18px] text-[#030712] opacity-60">
+                    Rental partners
+                  </p>
+                </div>
               </div>
             </div>
           </div>
         </div>
         <!-------------------------------- hero section ends ------------------------------>
+
+        <!-------------------------------- Best offers for you section starts ---------------------->
+        <section class="text-center mb-20">
+          <div class="flex items-center justify-center gap-6 mb-20">
+            <!-- left -->
+            <div
+              class="flex rounded-2xl items-center justify-center bg-[#FFBF0F] text-black px-12"
+            >
+              <div>
+                <h1 class="text-4xl font-bold">15% OFF</h1>
+                <p class="text-xl font-medium">On your next purchase</p>
+                <p class="text-[18px] font-medium opacity-50">
+                  Use by January 2025
+                </p>
+              </div>
+              <div>
+                <img class="h-52" src="images/cupon-devider.png" alt="" />
+              </div>
+              <div>
+                <h1 class="font-bold text-[32px]">NEW15</h1>
+                <p class="text-[18px] font-medium opacity-50">Coupon Code</p>
+              </div>
+            </div>
+            <!-- right -->
+            <div
+              class="flex rounded-2xl items-center justify-center bg-[#F78C9C] text-black px-12"
+            >
+              <div>
+                <h1 class="text-4xl font-bold">15% OFF</h1>
+                <p class="text-xl font-medium">On your next purchase</p>
+                <p class="text-[18px] font-medium opacity-50">
+                  Use by January 2025
+                </p>
+              </div>
+              <div>
+                <img class="h-52" src="images/cupon-devider.png" alt="" />
+              </div>
+              <div>
+                <h1 class="font-bold text-[32px]">Couple 20</h1>
+                <p class="text-[18px] font-medium opacity-50">Coupon Code</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <button
+              class="btn text-[#1DD100] bg-none border border-[#1DD100] text-xl px-8 font-semibold"
+            >
+              See All Offers
+            </button>
+          </div>
+        </section>
+        <!-------------------------------- Best offers for you section ends ---------------------->
       </main>
       <!-------------------------------- main section ends -------------------------------------->
     </section>
