--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="pb-28">
           <!-------------- part 1  starts--------->
-          <div class="z-0">
+          <div>
             <div
               class="hero min-h-[80vh] mt-10"
               style="background-image: url(images/banner.png)"
@@ -107,7 +107,7 @@
                     streamlined .
                   </p>
                   <button
-                    class="btn lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
+                    class="btn border-none lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
                   >
                     Buy Tickets
                   </button>
@@ -212,13 +212,110 @@
           </div>
           <div>
             <button
-              class="btn text-[#1DD100] bg-none border border-[#1DD100] text-xl px-8 font-semibold"
+              class="btn text-[#1DD100] bg-white border border-[#1DD100] text-xl px-8 font-semibold"
             >
               See All Offers
             </button>
           </div>
         </section>
         <!-------------------------------- Best offers for you section ends ---------------------->
+
+        <!-- s paribahan  text starts-->
+        <div class="text-center mt-40">
+          <h1 class="text-4xl font-semibold">S Paribahan</h1>
+          <p class="font-normal text-[18px] text-[#030712] opacity-60 mt-6">
+            Yes, you can run unit tests and view the results directly within the
+            app. The integrated <br />
+            testing features allow for a streamlined .
+          </p>
+        </div>
+        <!-- s paribahan  text ends-->
+
+        <!-- greenline poribahan section start-->
+        <section
+          class="flex items-center justify-between lg:px-10 md:px-4 border border-[#1DD100] rounded-3xl my-20"
+        >
+          <!-- part-1  -->
+          <div class="lg:w-4/5 md:w-3/4">
+            <!-- part 1.1 -->
+            <div class="flex items-start lg:justify-between md:justify-between">
+              <div class="flex items-center gap-4">
+                <div>
+                  <img src="images/bus-logo.png" alt="" />
+                </div>
+                <div>
+                  <h1 class="font-semibold text-3xl">Sabbir Paribahan</h1>
+                  <p class="text-[18px] font-normal text-[#030712] opacity-60">
+                    Coach-009-WEB ! AC_Business
+                  </p>
+                </div>
+              </div>
+              <div>
+                <button
+                  class="btn text-[#1DD100] bg-[#1dd100] bg-opacity-10 px-6 text-[18px]"
+                >
+                  <img src="images/seat-green.png" alt="" />
+                  <p><span>40 </span>Seats left</p>
+                </button>
+              </div>
+            </div>
+            <div class="rounded-xl p-8 bg-[#1DD100] bg-opacity-5 mt-6">
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-60">
+                  Route
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Dhaka-Sylhet
+                </p>
+              </div>
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-60">
+                  Route
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Dhaka-Sylhet
+                </p>
+              </div>
+
+              <div class="flex justify-between p-3">
+                <button
+                  class="btn text-[16px] font-normal text-[#030712] opacity-80 bg-[#030712] bg-opacity-5"
+                >
+                  Boarding Point - Laxmipur
+                </button>
+                <button
+                  class="btn text-[16px] font-normal text-[#030712] opacity-80 bg-[#030712] bg-opacity-5"
+                >
+                  Dropping Point - Bogura
+                </button>
+                <button
+                  class="btn text-[16px] font-normal text-[#030712] opacity-80 bg-[#030712] bg-opacity-5"
+                >
+                  Est. Time - 11 Hour
+                </button>
+              </div>
+            </div>
+            <!-- part 1.2 -->
+            <div></div>
+          </div>
+          <!-- part-2 -->
+          <div>
+            <img src="images/info-devider.png" alt="" />
+          </div>
+          <!-- part-3 -->
+          <div class="flex flex-col items-center justify-center">
+            <img
+              class="lg:h-12 md:h-6 lg:w-12 md:w-6"
+              src="images/fare.png"
+              alt=""
+            />
+            <h1 class="lg:text-[32px] font-semibold">550 Taka</h1>
+            <p class="lg:text-2xl font-normal text-[#030712] opacity-60">
+              Per Seat
+            </p>
+          </div>
+        </section>
+        <!-- greenline poribahan section ends-->
       </main>
       <!-------------------------------- main section ends -------------------------------------->
     </section>
