--- a/index.html
+++ b/index.html
@@ -268,14 +268,16 @@
                   Dhaka-Sylhet
                 </p>
               </div>
+              <hr />
               <div class="flex justify-between p-3">
                 <p class="text-[18px] font-medium text-[#030712] opacity-60">
-                  Route
+                  Departure Time
                 </p>
                 <p class="text-[18px] font-medium text-[#030712] opacity-100">
-                  Dhaka-Sylhet
+                  9:00 PM
                 </p>
               </div>
+              <hr />
 
               <div class="flex justify-between p-3">
                 <button
