--- a/index.html
+++ b/index.html
@@ -318,6 +318,125 @@
           </div>
         </section>
         <!-- greenline poribahan section ends-->
+
+        <!-- select your seat section starts -->
+
+        <!-- section 1 starts -->
+        <section class="my-20 border border-red-700 flex justify-start gap-8">
+          <!-- section 2 starts-->
+          <section class="w-3/6 px-4">
+            <!-- step-1  -->
+            <div class="mb-4">
+              <h1 class="text-2xl font-medium mb-4">Select Your Seat</h1>
+              <hr />
+            </div>
+            <!-- step 2 -->
+            <div class="mb-4 flex justify-between items-center">
+              <!-- step 2.1 -->
+              <div class="flex items-center gap-2">
+                <img src="images/seat-gray.png" alt="" />
+                <p class="text-gray-500">Available</p>
+              </div>
+              <!-- step 2.2 -->
+              <div class="flex gap-2 items-center">
+                <img src="images/seat-green-filled.png" alt="" />
+                <p class="text-[#1DD100]">Selected</p>
+              </div>
+            </div>
+            <!-- step 3 -->
+            <div class="mb-4 flex justify-end">
+              <button class="btn px-12">
+                <img src="images/tabler-icon-steering-wheel.png" alt="" />
+              </button>
+            </div>
+            <!-- step 4 seats -->
+            <div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">A</kbd>
+                <kbd class="kbd border-none px-14">A1</kbd>
+                <kbd class="kbd border-none px-14">A2</kbd>
+                <kbd class="kbd border-none px-14">A3</kbd>
+                <kbd class="kbd border-none px-14">A4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">B</kbd>
+                <kbd class="kbd border-none px-14">B1</kbd>
+                <kbd class="kbd border-none px-14">B2</kbd>
+                <kbd class="kbd border-none px-14">B3</kbd>
+                <kbd class="kbd border-none px-14">B4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">C</kbd>
+                <kbd class="kbd border-none px-14">C1</kbd>
+                <kbd class="kbd border-none px-14">C2</kbd>
+                <kbd class="kbd border-none px-14">C3</kbd>
+                <kbd class="kbd border-none px-14">C4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">D</kbd>
+                <kbd class="kbd border-none px-14">D1</kbd>
+                <kbd class="kbd border-none px-14">D2</kbd>
+                <kbd class="kbd border-none px-14">D3</kbd>
+                <kbd class="kbd border-none px-14">D4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">E</kbd>
+                <kbd class="kbd border-none px-14">E1</kbd>
+                <kbd class="kbd border-none px-14">E2</kbd>
+                <kbd class="kbd border-none px-14">E3</kbd>
+                <kbd class="kbd border-none px-14">E4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">F</kbd>
+                <kbd class="kbd border-none px-14">F1</kbd>
+                <kbd class="kbd border-none px-14">F2</kbd>
+                <kbd class="kbd border-none px-14">F3</kbd>
+                <kbd class="kbd border-none px-14">F4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">G</kbd>
+                <kbd class="kbd border-none px-14">G1</kbd>
+                <kbd class="kbd border-none px-14">G2</kbd>
+                <kbd class="kbd border-none px-14">G3</kbd>
+                <kbd class="kbd border-none px-14">G4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">H</kbd>
+                <kbd class="kbd border-none px-14">H1</kbd>
+                <kbd class="kbd border-none px-14">H2</kbd>
+                <kbd class="kbd border-none px-14">H3</kbd>
+                <kbd class="kbd border-none px-14">H4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">I</kbd>
+                <kbd class="kbd border-none px-14">I1</kbd>
+                <kbd class="kbd border-none px-14">I2</kbd>
+                <kbd class="kbd border-none px-14">I3</kbd>
+                <kbd class="kbd border-none px-14">I4</kbd>
+              </div>
+              <div class="flex justify-between items-center mb-4">
+                <kbd class="mr-2">J</kbd>
+                <kbd class="kbd border-none px-14">J1</kbd>
+                <kbd class="kbd border-none px-14">J2</kbd>
+                <kbd class="kbd border-none px-14">J3</kbd>
+                <kbd class="kbd border-none px-14">J4</kbd>
+              </div>
+            </div>
+          </section>
+          <!-- section 2 ends-->
+
+          <!-- section 3 starts-->
+          <section>
+            <!-- step-1  -->
+            <div class="mb-4">
+              <h1 class="text-2xl font-medium mb-4">Select Your Seat</h1>
+              <hr />
+            </div>
+          </section>
+          <!-- section 3 ends -->
+        </section>
+        <!-- section 1 ends -->
+        <!-- select your seat section ends  -->
       </main>
       <!-------------------------------- main section ends -------------------------------------->
     </section>
