--- a/index.html
+++ b/index.html
@@ -297,8 +297,6 @@
                 </button>
               </div>
             </div>
-            <!-- part 1.2 -->
-            <div></div>
           </div>
           <!-- part-2 -->
           <div>
@@ -322,9 +320,11 @@
         <!-- select your seat section starts -->
 
         <!-- section 1 starts -->
-        <section class="my-20 border border-red-700 flex justify-start gap-8">
+        <section
+          class="my-20 border border-gray-300 rounded-3xl p-6 flex justify-start gap-8"
+        >
           <!-- section 2 starts-->
-          <section class="w-3/6 px-4">
+          <section class="w-7/12 px-4">
             <!-- step-1  -->
             <div class="mb-4">
               <h1 class="text-2xl font-medium mb-4">Select Your Seat</h1>
@@ -353,84 +353,183 @@
             <div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">A</kbd>
-                <kbd class="kbd border-none px-14">A1</kbd>
-                <kbd class="kbd border-none px-14">A2</kbd>
-                <kbd class="kbd border-none px-14">A3</kbd>
-                <kbd class="kbd border-none px-14">A4</kbd>
+                <kbd class="kbd border-none px-14 py-3">A1</kbd>
+                <kbd class="kbd border-none px-14 py-3">A2</kbd>
+                <kbd class="kbd border-none px-14 py-3">A3</kbd>
+                <kbd class="kbd border-none px-14 py-3">A4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">B</kbd>
-                <kbd class="kbd border-none px-14">B1</kbd>
-                <kbd class="kbd border-none px-14">B2</kbd>
-                <kbd class="kbd border-none px-14">B3</kbd>
-                <kbd class="kbd border-none px-14">B4</kbd>
+                <kbd class="kbd border-none px-14 py-3">B1</kbd>
+                <kbd class="kbd border-none px-14 py-3">B2</kbd>
+                <kbd class="kbd border-none px-14 py-3">B3</kbd>
+                <kbd class="kbd border-none px-14 py-3">B4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">C</kbd>
-                <kbd class="kbd border-none px-14">C1</kbd>
-                <kbd class="kbd border-none px-14">C2</kbd>
-                <kbd class="kbd border-none px-14">C3</kbd>
-                <kbd class="kbd border-none px-14">C4</kbd>
+                <kbd class="kbd border-none px-14 py-3">C1</kbd>
+                <kbd class="kbd border-none px-14 py-3">C2</kbd>
+                <kbd class="kbd border-none px-14 py-3">C3</kbd>
+                <kbd class="kbd border-none px-14 py-3">C4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">D</kbd>
-                <kbd class="kbd border-none px-14">D1</kbd>
-                <kbd class="kbd border-none px-14">D2</kbd>
-                <kbd class="kbd border-none px-14">D3</kbd>
-                <kbd class="kbd border-none px-14">D4</kbd>
+                <kbd class="kbd border-none px-14 py-3">D1</kbd>
+                <kbd class="kbd border-none px-14 py-3">D2</kbd>
+                <kbd class="kbd border-none px-14 py-3">D3</kbd>
+                <kbd class="kbd border-none px-14 py-3">D4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">E</kbd>
-                <kbd class="kbd border-none px-14">E1</kbd>
-                <kbd class="kbd border-none px-14">E2</kbd>
-                <kbd class="kbd border-none px-14">E3</kbd>
-                <kbd class="kbd border-none px-14">E4</kbd>
+                <kbd class="kbd border-none px-14 py-3">E1</kbd>
+                <kbd class="kbd border-none px-14 py-3">E2</kbd>
+                <kbd class="kbd border-none px-14 py-3">E3</kbd>
+                <kbd class="kbd border-none px-14 py-3">E4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">F</kbd>
-                <kbd class="kbd border-none px-14">F1</kbd>
-                <kbd class="kbd border-none px-14">F2</kbd>
-                <kbd class="kbd border-none px-14">F3</kbd>
-                <kbd class="kbd border-none px-14">F4</kbd>
+                <kbd class="kbd border-none px-14 py-3">F1</kbd>
+                <kbd class="kbd border-none px-14 py-3">F2</kbd>
+                <kbd class="kbd border-none px-14 py-3">F3</kbd>
+                <kbd class="kbd border-none px-14 py-3">F4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">G</kbd>
-                <kbd class="kbd border-none px-14">G1</kbd>
-                <kbd class="kbd border-none px-14">G2</kbd>
-                <kbd class="kbd border-none px-14">G3</kbd>
-                <kbd class="kbd border-none px-14">G4</kbd>
+                <kbd class="kbd border-none px-14 py-3">G1</kbd>
+                <kbd class="kbd border-none px-14 py-3">G2</kbd>
+                <kbd class="kbd border-none px-14 py-3">G3</kbd>
+                <kbd class="kbd border-none px-14 py-3">G4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">H</kbd>
-                <kbd class="kbd border-none px-14">H1</kbd>
-                <kbd class="kbd border-none px-14">H2</kbd>
-                <kbd class="kbd border-none px-14">H3</kbd>
-                <kbd class="kbd border-none px-14">H4</kbd>
+                <kbd class="kbd border-none px-14 py-3">H1</kbd>
+                <kbd class="kbd border-none px-14 py-3">H2</kbd>
+                <kbd class="kbd border-none px-14 py-3">H3</kbd>
+                <kbd class="kbd border-none px-14 py-3">H4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">I</kbd>
-                <kbd class="kbd border-none px-14">I1</kbd>
-                <kbd class="kbd border-none px-14">I2</kbd>
-                <kbd class="kbd border-none px-14">I3</kbd>
-                <kbd class="kbd border-none px-14">I4</kbd>
+                <kbd class="kbd border-none px-14 py-3">I1</kbd>
+                <kbd class="kbd border-none px-14 py-3">I2</kbd>
+                <kbd class="kbd border-none px-14 py-3">I3</kbd>
+                <kbd class="kbd border-none px-14 py-3">I4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">J</kbd>
-                <kbd class="kbd border-none px-14">J1</kbd>
-                <kbd class="kbd border-none px-14">J2</kbd>
-                <kbd class="kbd border-none px-14">J3</kbd>
-                <kbd class="kbd border-none px-14">J4</kbd>
+                <kbd class="kbd border-none px-14 py-3">J1</kbd>
+                <kbd class="kbd border-none px-14 py-3">J2</kbd>
+                <kbd class="kbd border-none px-14 py-3">J3</kbd>
+                <kbd class="kbd border-none px-14 py-3">J4</kbd>
               </div>
             </div>
           </section>
           <!-- section 2 ends-->
 
           <!-- section 3 starts-->
-          <section>
+          <section class="w-5/12 mx-4">
             <!-- step-1  -->
             <div class="mb-4">
               <h1 class="text-2xl font-medium mb-4">Select Your Seat</h1>
               <hr />
+            </div>
+            <!-- step 2 -->
+            <div class="rounded-xl p-8 bg-[#1DD100] bg-opacity-5 mt-6">
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-60">
+                  Seat
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Class
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Price
+                </p>
+              </div>
+              <hr />
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-60">
+                  C1
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Economoy
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  550
+                </p>
+              </div>
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-60">
+                  C1
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Economoy
+                </p>
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  550
+                </p>
+              </div>
+              <hr />
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Total Price
+                </p>
+
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  BDT 1100
+                </p>
+              </div>
+              <!-- input fields -->
+              <fieldset class="fieldset bg-white rounded-box w-xs border p-2">
+                <div class="flex justify-between">
+                  <input
+                    type="text"
+                    class="input join-item"
+                    placeholder="Have any coupon?"
+                  />
+                  <button class="btn item px-8 bg-[#1DD100] text-white">
+                    Apply
+                  </button>
+                </div>
+              </fieldset>
+              <div class="flex justify-between p-3">
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  Grand Total
+                </p>
+
+                <p class="text-[18px] font-medium text-[#030712] opacity-100">
+                  BDT 1100
+                </p>
+              </div>
+            </div>
+            <!-- step 3 -->
+            <div class="mt-6">
+              <fieldset class="fieldset border rounded-box w-full p-4">
+                <label class="label">Passenger Name*</label>
+                <input
+                  type="email"
+                  class="input w-full mb-2"
+                  placeholder="Enter your name"
+                />
+
+                <label class="label">Phone Number*</label>
+                <input
+                  type="password"
+                  class="input w-full mb-2"
+                  placeholder="Enter your phone number"
+                />
+                <label class="label">Email ID</label>
+                <input
+                  type="password"
+                  class="input w-full mb-2"
+                  placeholder="Enter your email id"
+                />
+                <br />
+                <button
+                  class="btn btn-neutral mt-4 w-full border-none bg-[#1dd100] text-white"
+                >
+                  Next
+                </button>
+              </fieldset>
             </div>
           </section>
           <!-- section 3 ends -->
