--- a/index.html
+++ b/index.html
@@ -524,11 +524,13 @@
                   placeholder="Enter your email id"
                 />
                 <br />
-                <button
-                  class="btn btn-neutral mt-4 w-full border-none bg-[#1dd100] text-white"
+                <a href="success.html"
+                  ><button
+                    class="btn btn-neutral mt-4 w-full border-none bg-[#1dd100] text-white"
+                  >
+                    Next
+                  </button></a
                 >
-                  Next
-                </button>
               </fieldset>
             </div>
           </section>
