--- a/success.html
+++ b/success.html
@@ -30,7 +30,9 @@
           best service and deals for you.
         </p>
         <p>Shortly you will find a confirmation in your email.</p>
-        <button class="btn bg-[#1dd100] text-white px-8">Continue</button>
+        <a href="index.html">
+          <button class="btn bg-[#1dd100] text-white px-8">Continue</button></a
+        >
       </div>
     </div>
 
