--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               </div>
               <div>
                 <button
-                  class="btn text-[#1DD100] bg-[#1dd100] bg-opacity-10 px-4 text-[16px]"
+                  class="btn text-[#1DD100] bg-[#1dd100] bg-opacity-10 lg:px-4 md:px-2 lg:text-[16px] md:text-[14px]"
                 >
                   <img src="images/seat-green.png" alt="" />
                   <p><span>40 </span>Seats left</p>
