--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
           <!-- part-1  -->
           <div class="lg:w-4/5 md:w-3/4">
             <!-- part 1.1 -->
-            <div class="flex items-start lg:justify-between md:justify-between">
-              <div class="flex items-center gap-4">
+            <div class="flex items-start justify-between">
+              <div class="flex flex-row items-center justify-between gap-2">
                 <div>
                   <img src="images/bus-logo.png" alt="" />
                 </div>
@@ -251,11 +251,16 @@
                 </div>
               </div>
               <div>
+                <!-- btn -->
                 <button
-                  class="btn text-[#1DD100] bg-[#1dd100] bg-opacity-10 lg:px-4 md:px-2 lg:text-[16px] md:text-[14px]"
+                  class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg xl:btn-xl text-[#1DD100] bg-[#1dd100] bg-opacity-10"
                 >
-                  <img src="images/seat-green.png" alt="" />
-                  <p><span>40 </span>Seats left</p>
+                  <div class="flex items-center justify-between gap-2">
+                    <img src="images/seat-green.png" alt="" />
+                    <p class="lg:text-[16px] md:text-[14px]">
+                      <span>40</span> Seats left
+                    </p>
+                  </div>
                 </button>
               </div>
             </div>
