buy ticket adding js

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                     streamlined .
                   </p>
                   <button
+                    onclick="buyTicket()"
                     class="btn border-none lg:px-10 md:px-6 lg:text-xl bg-[#1DD100] text-white"
                   >
                     Buy Tickets
@@ -326,6 +327,7 @@
 
         <!-- section 1 starts -->
         <section
+          id="seat-booking-section"
           class="my-20 border border-gray-300 rounded-3xl p-6 flex justify-start gap-8"
         >
           <!-- section 2 starts-->
