apply button disable and next button disable

--- a/index.html
+++ b/index.html
@@ -493,7 +493,10 @@
                     class="input join-item"
                     placeholder="Have any coupon?"
                   />
-                  <button class="btn item px-8 bg-[#1DD100] text-white">
+                  <button
+                    disabled
+                    class="btn item px-8 bg-[#1DD100] text-white"
+                  >
                     Apply
                   </button>
                 </div>
@@ -531,13 +534,13 @@
                   placeholder="Enter your email id"
                 />
                 <br />
-                <a href="success.html"
-                  ><button
-                    class="btn btn-neutral mt-4 w-full border-none bg-[#1dd100] text-white"
-                  >
-                    Next
-                  </button></a
+
+                <button
+                  disabled
+                  class="btn btn-neutral mt-4 w-full border-none bg-[#1dd100] text-white"
                 >
+                  Next
+                </button>
               </fieldset>
             </div>
           </section>
