--- a/index.html
+++ b/index.html
@@ -360,73 +360,73 @@
             <div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">A</kbd>
-                <kbd class="kbd border-none px-14 py-3">A1</kbd>
-                <kbd class="kbd border-none px-14 py-3">A2</kbd>
-                <kbd class="kbd border-none px-14 py-3">A3</kbd>
-                <kbd class="kbd border-none px-14 py-3">A4</kbd>
+                <kbd id="A1" class="kbd border-none px-14 py-3">A1</kbd>
+                <kbd id="A2" class="kbd border-none px-14 py-3">A2</kbd>
+                <kbd id="A3" class="kbd border-none px-14 py-3">A3</kbd>
+                <kbd id="A4" class="kbd border-none px-14 py-3">A4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">B</kbd>
-                <kbd class="kbd border-none px-14 py-3">B1</kbd>
-                <kbd class="kbd border-none px-14 py-3">B2</kbd>
-                <kbd class="kbd border-none px-14 py-3">B3</kbd>
-                <kbd class="kbd border-none px-14 py-3">B4</kbd>
+                <kbd id="B1" class="kbd border-none px-14 py-3">B1</kbd>
+                <kbd id="B2" class="kbd border-none px-14 py-3">B2</kbd>
+                <kbd id="B3" class="kbd border-none px-14 py-3">B3</kbd>
+                <kbd id="B4" class="kbd border-none px-14 py-3">B4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">C</kbd>
-                <kbd class="kbd border-none px-14 py-3">C1</kbd>
-                <kbd class="kbd border-none px-14 py-3">C2</kbd>
-                <kbd class="kbd border-none px-14 py-3">C3</kbd>
-                <kbd class="kbd border-none px-14 py-3">C4</kbd>
+                <kbd id="C1" class="kbd border-none px-14 py-3">C1</kbd>
+                <kbd id="C2" class="kbd border-none px-14 py-3">C2</kbd>
+                <kbd id="C3" class="kbd border-none px-14 py-3">C3</kbd>
+                <kbd id="C4" class="kbd border-none px-14 py-3">C4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">D</kbd>
-                <kbd class="kbd border-none px-14 py-3">D1</kbd>
-                <kbd class="kbd border-none px-14 py-3">D2</kbd>
-                <kbd class="kbd border-none px-14 py-3">D3</kbd>
-                <kbd class="kbd border-none px-14 py-3">D4</kbd>
+                <kbd id="D1" class="kbd border-none px-14 py-3">D1</kbd>
+                <kbd id="D2" class="kbd border-none px-14 py-3">D2</kbd>
+                <kbd id="D3" class="kbd border-none px-14 py-3">D3</kbd>
+                <kbd id="D4" class="kbd border-none px-14 py-3">D4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">E</kbd>
-                <kbd class="kbd border-none px-14 py-3">E1</kbd>
-                <kbd class="kbd border-none px-14 py-3">E2</kbd>
-                <kbd class="kbd border-none px-14 py-3">E3</kbd>
-                <kbd class="kbd border-none px-14 py-3">E4</kbd>
+                <kbd id="E1" class="kbd border-none px-14 py-3">E1</kbd>
+                <kbd id="E2" class="kbd border-none px-14 py-3">E2</kbd>
+                <kbd id="E3" class="kbd border-none px-14 py-3">E3</kbd>
+                <kbd id="E4" class="kbd border-none px-14 py-3">E4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">F</kbd>
-                <kbd class="kbd border-none px-14 py-3">F1</kbd>
-                <kbd class="kbd border-none px-14 py-3">F2</kbd>
-                <kbd class="kbd border-none px-14 py-3">F3</kbd>
-                <kbd class="kbd border-none px-14 py-3">F4</kbd>
+                <kbd id="F1" class="kbd border-none px-14 py-3">F1</kbd>
+                <kbd id="F2" class="kbd border-none px-14 py-3">F2</kbd>
+                <kbd id="F3" class="kbd border-none px-14 py-3">F3</kbd>
+                <kbd id="F4" class="kbd border-none px-14 py-3">F4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">G</kbd>
-                <kbd class="kbd border-none px-14 py-3">G1</kbd>
-                <kbd class="kbd border-none px-14 py-3">G2</kbd>
-                <kbd class="kbd border-none px-14 py-3">G3</kbd>
-                <kbd class="kbd border-none px-14 py-3">G4</kbd>
+                <kbd id="G1" class="kbd border-none px-14 py-3">G1</kbd>
+                <kbd id="G2" class="kbd border-none px-14 py-3">G2</kbd>
+                <kbd id="G3" class="kbd border-none px-14 py-3">G3</kbd>
+                <kbd id="G4" class="kbd border-none px-14 py-3">G4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">H</kbd>
-                <kbd class="kbd border-none px-14 py-3">H1</kbd>
-                <kbd class="kbd border-none px-14 py-3">H2</kbd>
-                <kbd class="kbd border-none px-14 py-3">H3</kbd>
-                <kbd class="kbd border-none px-14 py-3">H4</kbd>
+                <kbd id="H1" class="kbd border-none px-14 py-3">H1</kbd>
+                <kbd id="H2" class="kbd border-none px-14 py-3">H2</kbd>
+                <kbd id="H3" class="kbd border-none px-14 py-3">H3</kbd>
+                <kbd id="H4" class="kbd border-none px-14 py-3">H4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">I</kbd>
-                <kbd class="kbd border-none px-14 py-3">I1</kbd>
-                <kbd class="kbd border-none px-14 py-3">I2</kbd>
-                <kbd class="kbd border-none px-14 py-3">I3</kbd>
-                <kbd class="kbd border-none px-14 py-3">I4</kbd>
+                <kbd id="I1" class="kbd border-none px-14 py-3">I1</kbd>
+                <kbd id="I2" class="kbd border-none px-14 py-3">I2</kbd>
+                <kbd id="I3" class="kbd border-none px-14 py-3">I3</kbd>
+                <kbd id="I4" class="kbd border-none px-14 py-3">I4</kbd>
               </div>
               <div class="flex justify-between items-center mb-4">
                 <kbd class="mr-2">J</kbd>
-                <kbd class="kbd border-none px-14 py-3">J1</kbd>
-                <kbd class="kbd border-none px-14 py-3">J2</kbd>
-                <kbd class="kbd border-none px-14 py-3">J3</kbd>
-                <kbd class="kbd border-none px-14 py-3">J4</kbd>
+                <kbd id="J1" class="kbd border-none px-14 py-3">J1</kbd>
+                <kbd id="J2" class="kbd border-none px-14 py-3">J2</kbd>
+                <kbd id="J3" class="kbd border-none px-14 py-3">J3</kbd>
+                <kbd id="J4" class="kbd border-none px-14 py-3">J4</kbd>
               </div>
             </div>
           </section>
@@ -516,20 +516,22 @@
               <fieldset class="fieldset border rounded-box w-full p-4">
                 <label class="label">Passenger Name*</label>
                 <input
-                  type="email"
+                  required
+                  type="name"
                   class="input w-full mb-2"
                   placeholder="Enter your name"
                 />
 
                 <label class="label">Phone Number*</label>
                 <input
-                  type="password"
+                  required
+                  type="number"
                   class="input w-full mb-2"
                   placeholder="Enter your phone number"
                 />
                 <label class="label">Email ID</label>
                 <input
-                  type="password"
+                  type="email"
                   class="input w-full mb-2"
                   placeholder="Enter your email id"
                 />
